# ASEAI_PI

./: .gitignore  CMakeLists.txt  README.md
images/: README.md
include/: MyGPIO.h  MyPWM.h  README.md
python/: Visage.py  camera.py  traitement.py
src/: MyGPIO.c  MyPWM.c  alarme.c  main.c  motor.c  signaux.c
